# bubble

./: .gitignore  README.md  base.md  plan.md
apps/api/: pyproject.toml  test_api.py  test_output.txt
apps/api/app/: __init__.py  main.py
apps/api/app/api/routes/: datasets.py  health.py  query_sessions.py
apps/api/app/core/: config.py
apps/api/app/schemas/: dataset.py  events.py  query.py
apps/api/app/services/approx/: adaptive_sampling.py  hyperloglog.py  progress.py  stratified_sampling.py
apps/api/app/services/datasets/: bootstrap.py  catalog.py  uploads.py
apps/api/app/services/exact/: duckdb_runner.py
apps/api/app/services/nl_sql/: __init__.py  fallback_templates.py  prompts.py  provider.py  translator.py
apps/api/app/services/planner/: __init__.py  parser.py  router.py  validator.py
apps/api/app/services/sessions/: manager.py  streamer.py
apps/api/tests/: test_adaptive_streaming.py  test_dataset_uploads.py  test_hyperloglog_streaming.py  test_query_history.py  test_stratified_streaming.py
apps/web/: .env.example  index.html  package.json  pnpm-lock.yaml  test-graph.html
apps/web/src/: App.css  App.tsx  landing.tsx  main.tsx  test-graph.tsx  theme-bridge.ts  vite-env.d.ts
apps/web/src/design-system/: tokens.css
apps/web/src/features/: convergence-graph.jsx  convergence-graph.tsx
apps/web/src/lib/: api.ts  format.ts  sse.ts
apps/web/src/mocks/: query-session.ts
apps/web/src/types/: query.ts
docs/: architecture.md
docs/contracts/: nl-sql.md  planner-output.md  query-sessions.md
docs/prompts/: demo-prompts.md
