[project]
name = "swiftquery-api"
version = "0.1.0"
description = "FastAPI stub backend for SwiftQuery"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.2,<2.0",
  "fastapi>=0.111,<1.0",
  "pydantic>=2.7,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
